Added GitHub repository link

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
         </ul>
       </div>
     </div>
+    <a
+      href="https://github.com/veronicacastellanos/Weather-App-Project"
+      target="_blank"
+      >GitHub</a
+    >
     <script src="src/script.js"></script>
   </body>
 </html>
