--- a/index.html
+++ b/index.html
@@ -123,11 +123,14 @@
         </ul>
       </div>
     </div>
-    <a
-      href="https://github.com/veronicacastellanos/Weather-App-Project"
-      target="_blank"
-      >GitHub</a
-    >
+    <small>
+      <a
+        href="https://github.com/veronicacastellanos/Weather-App-Project"
+        target="_blank"
+        >Open Sourced Code</a
+      >
+      by Verónica Castellanos
+    </small>
     <script src="src/script.js"></script>
   </body>
 </html>
