Updated weather stats in JS

--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
               <li class="stats">
                 High
                 <br />
-                29°C
+                <span id="high-temp"></span>
               </li>
             </div>
             <li class="stats">
               <div class="col-3">
                 Low
                 <br />
-                16°C
+                <span id="low-temp"></span>
               </div>
             </li>
             <div class="col-3">
               <li class="stats">
-                Rain
+                Humidity
                 <br />
-                10%
+                <span id= "humidity"></span>
               </li>
             </div>
             <div class="col-3">
               <li class="stats">
                 Wind
                 <br />
-                30KM/H
+                <span id="wind-speed"></span>
               </li>
             </div>
           </div>
@@ -127,7 +127,7 @@
       <a
         href="https://github.com/veronicacastellanos/Weather-App-Project"
         target="_blank"
-        >Open Sourced Code</a
+        >Open-Source Code</a
       >
       by Verónica Castellanos
     </small>
