Added style to search form

--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
             autofocus="on"
             autocomplete="off"
             id="city-input"
+            class= "search-form"
           />
-          <input type="submit" value="Search" />
+          <input type="submit" value="Search" class="search-button"/>
         </form>
         <h2 id="city"></h2>
-        <p class="current-temperature" id="temp-now"></p>
-        <p class="current-date" id="date">Wednesday, 15 September</p>
+        <div class="current-temperature">
+        <img src=" " id="icon"/> <span id="temp-now"></span>
+        </div>
+       <p class="current-date" id="date">Wednesday, 15 September</p>
         <ul>
           <div class="row">
             <div class="col-3">
