Added Unit Conversion

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         </form>
         <h2 id="city"></h2>
         <div class="current-temperature">
-        <img src=" " id="icon"/> <span id="temp-now"></span>
+        <img src=" " id="icon"/> <strong id="temp-now"></strong>
+        <span class="units"><a href="#" id="celsius-link" class="active">°C</a> |
+          <a href="#" id="fahrenheit-link">°F</a></span>
         </div>
-       <p class="current-date" id="date">Wednesday, 15 September</p>
+       <p> Last updated: <span class= "current-date" id="date"></span></p>
         <ul>
           <div class="row">
             <div class="col-3">
