Updated style and added custom display city

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </ul>
       </div>
     </div>
-    <small>
+    <small class="source-code">
       <a
         href="https://github.com/veronicacastellanos/Weather-App-Project"
         target="_blank"
