Added 3 hour forecast feature

--- a/index.html
+++ b/index.html
@@ -72,60 +72,9 @@
               </li>
             </div>
           </div>
-        </ul>
-        <h3>Forecast</h3>
-        <ul>
-          <div class="row">
-            <div class="col-2">
-              <li class="forecast">
-                Thursday
-                <br />
-                <br />
-                <i class="fas fa-cloud"></i>
-              </li>
-            </div>
-            <div class="col-2">
-              <li class="forecast">
-                Friday
-                <br />
-                <br />
-                <i class="fas fa-cloud"></i>
-              </li>
-            </div>
-            <div class="col-2">
-              <li class="forecast">
-                Saturday
-                <br />
-                <br />
-                <i class="fas fa-cloud-rain"></i>
-              </li>
-            </div>
-            <div class="col-2">
-              <li class="forecast">
-                Sunday
-                <br />
-                <br />
-                <i class="fas fa-cloud-sun"></i>
-              </li>
-            </div>
-            <div class="col-2">
-              <li class="forecast">
-                Monday
-                <br />
-                <br />
-                <i class="fas fa-cloud-sun"></i>
-              </li>
-            </div>
-            <div class="col-2">
-              <li class="forecast">
-                Tuesday
-                <br />
-                <br />
-                <i class="fas fa-cloud-sun"></i>
-              </li>
-            </div>
+        <h3>3 Hour Forecast</h3>
+          <div class="row weather-forecast" id="forecast">
           </div>
-        </ul>
       </div>
     </div>
     <small class="source-code">
